crates/ironic/tests/ui/fail/module_requires_metadata.rs
use ironic::Module;

#[derive(Module)]
struct AppModule;

fn main() {}
