crates/ironic/tests/ui/fail/module_requires_metadata.stderr
error: `Module` requires exactly one `#[module(...)]` attribute
 --> crates/ironic/tests/ui/fail/module_requires_metadata.rs:4:8
  |
4 | struct AppModule;
  |        ^^^^^^^^^
